# JazzyOrderBook

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci-arm.yml  ci.yml
benchmark_results/: apple_m2_best.txt  apple_m2_new.txt  apple_m2_portable_best.txt
benchmarks/: CMakeLists.txt  fifo_map_order_book.hpp  map_order_book.hpp  orderbook_benchmarks.cpp  select_nth_benchmark.cpp
include/jazzy/: order_book.hpp  traits.hpp  types.hpp
include/jazzy/detail/: bounds_policy.hpp  intrusive_fifo.hpp  level_bitmap.hpp  level_storage.hpp  select_nth.hpp  zero_volume_policy.hpp
scripts/: README.md  benchmark_compare.sh  detect_hardware.sh  install-hooks.sh  pre-commit  setup.sh  visualize_benchmarks.py
tests/: CMakeLists.txt  allocator_tests.cpp  best_price_regression_tests.cpp  catch.hpp  fifo_map_orderbook_tests.cpp  fifo_orderbook_tests.cpp  intrusive_fifo_tests.cpp  level_bitmap_portable_tests.cpp  level_bitmap_tests.cpp  main.cpp  order.hpp  orderbook_tests.cpp  out_of_range_tests.cpp  select_nth_test.cpp  tick_type_strong_tests.cpp  unsigned_volume_test.cpp
utils/: select_nth.hpp
